--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -6,14 +6,18 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MyActivity">
+    tools:context=".MyActivity"
+    android:background="#ffe1e1e1"
+    android:clickable="false">
 
     <LinearLayout
         android:id="@+id/root_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="3">
+        android:weightSum="3"
+        android:baselineAligned="true"
+        android:clickable="false">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -41,7 +45,8 @@
                     android:clickable="true"
                     android:textColor="#ffffffff"
                     android:background="#ff000000"
-                    android:textSize="48dp" />
+                    android:textSize="48dp"
+                    android:id="@+id/score1" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -90,7 +95,8 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textSize="48dp"
                     android:background="#FFFFFF"
-                    android:textColor="#000000" />
+                    android:textColor="#000000"
+                    android:id="@+id/score2" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -151,7 +157,8 @@
                     android:autoText="false"
                     android:background="#0000FF"
                     android:textColor="#FFFF00"
-                    android:textSize="48dp" />
+                    android:textSize="48dp"
+                    android:id="@+id/score3" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -202,7 +209,8 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:background="#FFFF00"
                     android:textSize="48dp"
-                    android:textColor="#0000FF" />
+                    android:textColor="#0000FF"
+                    android:id="@+id/score4" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -260,7 +268,8 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:background="#FF0000"
                     android:textColor="#FFFFFF"
-                    android:textSize="48dp" />
+                    android:textSize="48dp"
+                    android:id="@+id/score5" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -310,7 +319,8 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:background="#00FF00"
                     android:textSize="48dp"
-                    android:textColor="#FFFFFF" />
+                    android:textColor="#FFFFFF"
+                    android:id="@+id/score6" />
 
                 <LinearLayout
                     android:layout_width="0dp"
