Changed version, added player name property to view, added edit name functionality

--- a/app/src/main/res/layout/sample_player.xml
+++ b/app/src/main/res/layout/sample_player.xml
@@ -21,7 +21,8 @@
             android:gravity="center"
             android:text="@string/default_score"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="18dp" />
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="0dp"
