min SDK version was decreased, reset player names implemented, other minor changes

--- a/app/src/main/res/menu/my.xml
+++ b/app/src/main/res/menu/my.xml
@@ -9,6 +9,10 @@
         android:title="@string/clear_results_menu_item"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/action_reset_player_names_menu"
+        android:title="@string/reset_player_names"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
     <item android:id="@+id/action_about_menu"
         android:title="@string/about_menu_item"
         android:orderInCategory="100"
